align fix

--- a/css/everyday.css
+++ b/css/everyday.css
@@ -369,6 +369,7 @@ body {
 #information-section {
   overflow: hidden;
   height: auto;
+  width: 100%;
 }
 
 .info-subsection-header {
@@ -387,9 +388,10 @@ body {
 .example-mvp-image {
   margin: 0 auto;
   width: 65%;
+  display: block;
   margin-top: 2em;
-  margin-left: 15em;
-  margin-right: 15em;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 2em;
 }
 
@@ -404,9 +406,11 @@ body {
 }
 
 .MVP-items li {
+  width: 50%;
   text-align: left;
   list-style: initial;
-  margin-left: 20em;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1em;
 }
 
@@ -444,7 +448,9 @@ body {
 .wireframe-image-one {
   margin: 0 auto;
   width: 50%;
-  margin-left: 18em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 2em;
 }
 
@@ -465,7 +471,10 @@ body {
 }
 
 .logo-designs {
-  margin-left: 22em;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 50%;
 }
 
 .logo-subsection-header {
@@ -475,7 +484,7 @@ body {
 .logo-image-one, .logo-image-two, .logo-image-three, .logo-image-four {
   border: 1px solid black;
   display: inline-block;
-  width: 30%;
+  width: 40%;
 }
 
 .color-subsection-header {
@@ -491,6 +500,8 @@ body {
 .colors {
   border-radius: 20px;
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hifi {
@@ -1054,7 +1065,7 @@ body {
   .logo-image-one, .logo-image-two, .logo-image-three, .logo-image-four {
     border: 1px solid black;
     display: inline-block;
-    width: 30%;
+    width: 40%;
   }
 
   .color-subsection-header {
@@ -1074,10 +1085,11 @@ body {
 
   .hifi {
     width: 50%;
+    display: block;
     border: .5px;
     border-style: solid;
-    margin-left: 18em;
-    margin-right: 18em;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .desktop-prototype {
